[package]
name = "hyper-backtracer"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.41"
chrono-tz = "0.10.3"
thiserror = "2.0.12"
anyhow = "1.0.98"
